Update title in index.html to include input note

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Student Placement Prediction</title>
+    <title>Student Placement Prediction(Use only integer value</title>
     <style>
         body {
             font-family: Arial, sans-serif;
